# palbaker-cli

./: .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  UI_detachment_plan.md  USER.md  build-release.mjs  build_mod.py  cli_queries_dump.json  commands.md  dump_cli_queries.py  fix_imports.py  fix_indent.py  for_rose.md  manager-test.py  manager.py  manager_settings.json  output.json  package.json  pal_names_map.json  palbaker_cli.py  palbaker_cli.spec  parse_wwise.py  patch_anims.py  patch_guardian_dog_anims.py  patch_mods_view.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  resolved_sound_map.json  test_audio_cli.py  test_creator.json  test_creator_cli.py  test_pipeline_cli.py  todo.md  ue_export.py  ue_import.py
.openclaw/: workspace-state.json
components/: mod_item.py  mods_view.py  settings_view.py
controllers/: audio_controller.py  mods_controller.py  settings_controller.py
docs/: ui_philosophy.md
memory/: 2026-06-08-cli-unreal.md  2026-06-08-refactor-cleanup.md  2026-06-08-repo-indexing.md  2026-06-08.md  2026-06-09.md
palbaker-ui/: next.config.ts  package.json
palbaker-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  update.json
palbaker-ui/src-tauri/capabilities/: default.json
palbaker-ui/src-tauri/icons/: icon.icns
palbaker-ui/src-tauri/src/: commands.rs  lib.rs  main.rs
pythoncli/: .gitignore  CLI_BRIDGE_COMPLETION_REPORT.md  README.md  build_mod.py  cli_queries_dump.json  feedback.txt  flet_docs_dump.txt  manager.py  palbaker_cli.py  patch_cli_missing.py  test_wwise.py
tests/: run_all_tests.py  (+4 more)
(+234 files in other folders)
