[package]
name = "palbaker"
version = "0.1.0"
description = "PalBaker — Palworld mod toolchain"
authors = ["GoldenCarrotMLP"]
edition = "2021"

[lib]
name = "palbaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.tauri]
