[package]
name = "palbaker"
version = "0.1.0"
description = "PalBaker — Palworld mod toolchain"
authors = ["GoldenCarrotMLP"]
edition = "2021"

[lib]
name = "palbaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[package.metadata.tauri]
